fix: loader&error align-self, rename reducer

--- a/workflow/react-project/src/components/Loader.css
+++ b/workflow/react-project/src/components/Loader.css
@@ -1,9 +1,13 @@
 .loader {
+    align-self: center;
+
+    width: 70px;
+    height: 70px;
+
     border: 5px solid #f3f3f3;
     border-radius: 50%;
     border-top: 5px solid #4CAF50;
-    width: 70px;
-    height: 70px;
+
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
